--- a/server/src/views/index.ejs
+++ b/server/src/views/index.ejs
@@ -5,27 +5,22 @@
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <title>EMonitor</title>
         <script
-            src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.min.js"></script>
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <!-- <link rel="stylesheet" href="../static/style.css"> -->
     </head>
     <body>
-        
-        
         <!-- <div class="chart-container">
-            <canvas id="temperatureChart"></canvas>
-        </div>
-        <div class="chart-container">
-            <canvas id="humidityChart"></canvas>
-        </div>
-        <div class="chart-container">
-            <canvas id="pressureChart"></canvas>
-        </div>
-        <div class="chart-container">
-            <canvas id="lightChart"></canvas>
+            <canvas id="tChart" style="width:100%;max-width:700px"></canvas>
         </div> -->
+        <div class="d-flex align-items-center">
+            <h1 class="display-3 m-2 p-4 align-content-center">Environment Monitor</h1>
+        </div>
         <div class="table-div">
             <table class="table table-striped">
                 <tr>
@@ -61,9 +56,34 @@
 
                     <% }); %>
                 
-
             </table>
+            
         </div>
+        <div id="valueData" data-test=<%= values %>></div>
+
+        <!-- <script>
+            var test = document.getElementById('valueData').dataset.test;
+            console.log(test[0]);
+
+            
+            var xValues = [50,60,70,80,90,100,110,120,130,140,150];
+            var yValues = [7,8,8,9,9,9,10,11,14,14,15];
+
+            
+
+            new Chart("tChart", {
+            type: "line",
+            data: {
+                labels: xValues,
+                datasets: [{
+                backgroundColor: "rgba(0,0,0,2.0)",
+                borderColor: "rgba(0,0,0,0.1)",
+                data: yValues
+                }]
+            },
+            
+            });
+        </script> -->
         <!-- <script>
             // Global parameters:
             // do not resize the chart canvas when its container does (keep at 600x400px)
